name:                break-mingw
version:             0.1.0.0
license-file:        LICENSE
author:              Darren Grant
maintainer:          dedgrant@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
                   
library
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries:     SDL2
  pkgconfig-depends:   sdl2 >= 2.0.3
